--- a/index.html
+++ b/index.html
@@ -38,16 +38,22 @@
       <button type ="submit" class="btn btn-danger">see your animal</button>
     </form>  
     <div id="liger"> 
-      <p>Fun Fact! <span class="clickable">Click here</span></p>
-        <img src="https://images-ext-2.discordapp.net/external/r8WRtzvGJjRwiB68wxkC7kAztpmBAWQKTbmbO9qTeT8/%3Fw%3D161%26h%3D180%26c%3D7%26o%3D5%26dpr%3D2.5%26pid%3D1.7/https/th.bing.com/th/id/OIP.BkrP6HHR2uybBRBLOEECJAHaIR" alt="liger">
-    </div>
-    <div id="sloth"> 
       <p>
-        <img src="https://images-ext-1.discordapp.net/external/XL_Ne82s95XPNbTpTMc8JsQYI_Ia6MpB6-kU91DLMvA/%3Fw%3D273%26h%3D182%26c%3D7%26o%3D5%26dpr%3D2.5%26pid%3D1.7/https/th.bing.com/th/id/OIP.qHlRBDXIrAX4QnBqZ3LhKwHaE8" alt="sloth">
+      <img src="https://images-ext-2.discordapp.net/external/r8WRtzvGJjRwiB68wxkC7kAztpmBAWQKTbmbO9qTeT8/%3Fw%3D161%26h%3D180%26c%3D7%26o%3D5%26dpr%3D2.5%26pid%3D1.7/https/th.bing.com/th/id/OIP.BkrP6HHR2uybBRBLOEECJAHaIR" alt="liger">
       </p>
     </div>
-    <div id="quokka"> 
+    <div id="ligerClick">
+      <p>Fun Fact! Made famous from Napolean Dynamite!</p>
+    </div>  
+    <div id="sloth">
       <p>
+      <img src="https://images-ext-1.discordapp.net/external/XL_Ne82s95XPNbTpTMc8JsQYI_Ia6MpB6-kU91DLMvA/%3Fw%3D273%26h%3D182%26c%3D7%26o%3D5%26dpr%3D2.5%26pid%3D1.7/https/th.bing.com/th/id/OIP.qHlRBDXIrAX4QnBqZ3LhKwHaE8" alt="sloth">
+      </p>
+    </div>
+    <div id="slothClick">
+      <p>Fun Fact! Sloths are super slow!</p>
+    </div>
+      <div id="quokka"> 
         <img src="https://images-ext-1.discordapp.net/external/9AcCcTizDSV8HrbdHZ3sPjDny_QoSkU8zsqFCjLnltA/https/lh5.googleusercontent.com/NXVK4kROgecf0HuImKRM_kBO4TiqH1-kGD-2BIn8AmvDo13tXuDY5NjuT6fxpxGbNXo8U54FZdnJnRZSWqEbA2fGpNaRtU6Pa8zDjwFf3LycGB-QdoVr8XLnWvEUxSZQmslsnyN4?width=959&height=716" alt="quokka">
       </p>
     </div>
